--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Prajjwal Sony</strong>, currently pursuing B.Tech in Electronics and Computer Engineering at Vellore Institute of Technology. </p>
+										<p><strong>Hi, I'm Prajjwal Sony</strong>, currently pursuing B.Tech in Electronics and Computer Engineering at Vellore Institute of Technology. </p>
 										<p>My interests lie in backend development and machine learning, which I have demonstrated through various projects. 
 											My domain knowledge enables me to leverage technology to create impactful solutions.</p>
 									</div>
@@ -172,7 +172,7 @@
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to know you that <br>I have completed several projects and <br>gained valuable experience in project development and management!</h2>
+										<h2>Successfully completed various individual and team projects, <br>gaining deeper domain knowledge as well as expertise in project development and team management!</h2>
 										<!-- <a href="#" class="btn-hire" data-nav-section="contact">Hire me</a> -->
 									</div>
 								</div>
@@ -211,7 +211,7 @@
 								</span>
 								<div class="desc">
 									<h3>BotBreak</h3>
-									<p>A bot for autonomously palying CallBreak (A card Game)</p>
+									<p>A bot for autonomously playing CallBreak (A popular card Game)</p>
 								</div>
 							</div>
 						</div>
