--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 								</span>
 								<div class="desc">
 									<h3>HealthBridge</h3>
-									<p>Digitalizing the patient-doctor appointment and prescription</p>
+									<p>A digital solution for managing patient-doctor appointments and prescription records</p>
 								</div>
 							</div>
 						</div>
@@ -211,7 +211,7 @@
 								</span>
 								<div class="desc">
 									<h3>BotBreak</h3>
-									<p>A bot for autonomously playing CallBreak (A popular card Game)</p>
+									<p>By analyzing the scenario, the bot is capable of autonomously playing the card game, CallBreak</p>
 								</div>
 							</div>
 						</div>
@@ -222,7 +222,7 @@
 								</span>
 								<div class="desc">
 									<h3>Traffictelligence</h3>
-									<p>Hourly traffic volume estimation using Machine Learning</p>
+									<p>Machine learning model designed to estimate the traffic volume on an hourly basis</p>
 								</div>
 							</div>
 						</div>
