--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
 			<div class="colorlib-footer">
 				<ul>
-					<li><a href="" target="_blank" style="color:black;"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2" style="color:black;"></i></a></li>
-					<li><a href="https://www.instagram.com/prajjwalsony?igsh=cDRlamdoNmRvbWw0"><i class="icon-instagram" style="color:black;"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/prajjwalsony"><i class="icon-linkedin2" style="color:black;"></i></a></li>
+					<li><a href="" target="_blank" style="color:#1877F2;"><i class="icon-facebook2"></i></a></li>
+					<li><a href="#"><i class="icon-twitter2" style="color:#1DA1F2;"></i></a></li>
+					<li><a href="https://www.instagram.com/prajjwalsony?igsh=cDRlamdoNmRvbWw0"><i class="icon-instagram" style="color:#E4405F;"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/prajjwalsony"><i class="icon-linkedin2" style="color:#0A66C2;"></i></a></li>
 					<li><a href="https://www.github.com/in/prajjwalsony"><i class="icon-github" style="color:black;"></i></a></li>
 				</ul>
 			</div>
@@ -758,9 +758,9 @@
 	<footer class="social-media-footer">
 		<ul style="list-style: none; padding: 0; margin: 0; text-align: center;">
 			<li style="display: inline-block; margin: 0 10px;">
-				<a href="mailto:xyz@gmail.com" style="display: block; text-decoration: none; color: black;">
-					<i class="icon-mail" style="font-size: 2.5vmax; display: block; margin-bottom: 8px;"></i>
-					sonyprajjwal@gmail.com
+				<a href="mailto:xyz@gmail.com" style="display: block; text-decoration: none; color: rgb(69, 67, 67);">
+					<i class="icon-mail" style="font-size: 2.5vmax; display: block; margin-bottom: 8px; color: #e7867d"></i>
+					<strong>sonyprajjwal@gmail.com</strong>
 				</a>
 			</li>
 			<!-- Add other social media icons here -->
