--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
 	<footer class="social-media-footer">
 		<ul style="list-style: none; padding: 0; margin: 0; text-align: center;">
 			<li style="display: inline-block; margin: 0 10px;">
-				<a href="mailto:xyz@gmail.com" style="display: block; text-decoration: none; color: rgb(69, 67, 67);">
+				<a href="sonyprajjwal@gmail.com" style="display: block; text-decoration: none; color: rgb(69, 67, 67);">
 					<i class="icon-mail" style="font-size: 2.5vmax; display: block; margin-bottom: 8px; color: #e7867d"></i>
 					<strong>sonyprajjwal@gmail.com</strong>
 				</a>
